# py_ds_hw_2

./: pyproject.toml
py_ds_hw_2/: __init__.py
py_ds_hw_2/connection/: connection.py
py_ds_hw_2/tables/: main.py
py_ds_hw_2/task_2/: __init__.py
